--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -495,6 +495,32 @@ input[type="checkbox"]:checked+.size-pill::before {
     color: white;
 }
 
+#toastContainer {
+    position: fixed;
+    top: 1rem;
+    right: 1rem;
+    z-index: 1055;
+}
+
+.toast-success {
+    background-color: #8af3a3 !important;
+    color: #000;
+}
+
+.toast-body {
+    color: #000;
+}
+
+.toast-error {
+    background-color: #f38590 !important;
+    color: #fff;
+}
+
+.toast-info {
+    background-color: #77a6ec !important;
+    color: #fff;
+}
+
 /* Responsive Styles */
 @media (min-width: 992px) {
     .sidebar {
@@ -586,7 +612,7 @@ input[type="checkbox"]:checked+.size-pill::before {
     color: var(--text-light);
 }
 
-.editFormSelect{
+.editFormSelect {
     background-color: var(--dark-secondary);
     color: var(--text-light);
 }
